hedgedoc/hedgedoc_auth.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hedgedoc-auth-middleware
spec:
  basicAuth:
    secret: hedgedoc-auth
