hedgedoc/hedgedoc_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hedgedoc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hedgedoc
  strategy:
    type: RollingUpdate
    rollingUpdate: { maxSurge: 1,  maxUnavailable: 0 }
  template:
    metadata:
      labels:
        app: hedgedoc
    spec:
      volumes:
        - name: hedgedoc-public
          persistentVolumeClaim:
            claimName: hedgedoc-claim
      containers:
        - name: hedgedoc
          volumeMounts:
            - name: hedgedoc-public
              mountPath: /hedgedoc/public/uploads
          imagePullPolicy: IfNotPresent
          image: quay.io/hedgedoc/hedgedoc:1.9.9-alpine
